--- a/index.html
+++ b/index.html
@@ -18,12 +18,12 @@
     <section class="container">
       <div class="results-container">
         <h4 class="results__heading">Your Result</h4>
-        <div class="results__score-container">
-          <h2 class="results__score--big">76</h2>
-          <p class="results__score--small">of 100</p>
+        <div class="results-score-container">
+          <h2 class="results-score--big">76</h2>
+          <p class="results-score--small">of 100</p>
         </div>
-        <h3 class="results__msg--big">Great</h3>
-        <p class="results__msg--small">
+        <h3 class="heading-tertiary">Great</h3>
+        <p class="results-msg--small">
           You scored higher than 65% of <br />the people who have taken <br />
           these tests.
         </p>
